--- a/src/App.css
+++ b/src/App.css
@@ -482,75 +482,20 @@ input[type="radio"] {
   text-align: center;
   padding: 5% 7.5%;
 }
-.swiper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-.swiper {
-  margin: auto;
-}
-
-.swiper-button-next,
-.swiper-button-prev {
-  color: var(--color-primary-blue);
-}
-
-.swiper-pagination {
-  position: relative;
-  margin-top: 50px;
-}
-.event-swiper {
-  width: 80%;
-}
-.event-description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 40px;
-  width: 50%;
-}
-
-#event-title {
-  font-size: 35px;
-}
-
-#event-desc {
-  text-align: center;
-  font-size: 18px;
-  margin-top: 20px;
-  line-height: 1.6;
-}
 
 /* Gallery Section */
 #gallery-section {
-  padding: 5% 7.5%;
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    
 }
 
 .gallery-container {
   margin: auto;
   width: 70%;
   text-align: center;
+  padding-top: 30px;
 }
 
 .gallery-container h1 {
@@ -562,6 +507,7 @@ input[type="radio"] {
   object-fit: cover;
   height: 60vh;
   width: 100%;
+  border-radius: 25px;
 }
 
 .carousel-inner {
@@ -826,11 +772,6 @@ hr{
     width: 85%;
   }
 
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: none;
-  }
-
   .icons {
     margin: 30px auto;
     width: 70%;
@@ -977,8 +918,4 @@ hr{
   .footer-map-container p{
     text-align: center;
   }
-}
-
-.swiper-pagination-bullet-active{
-  --swiper-theme-color: darkblue;
 }
